@@ -142,6 +142,7 @@ connect {
 # ngIRCD 0.9.1 IRCD   : ngircd
 # Plexus 3            : plexus3
 # Ratbox 2.0          : ratbox
+# ScaryNet 2.10.11.x  : scarynet
 # SolidIRCD           : solidircd
 # Ultimate 3.0        : ultimate3
 # Unreal 3.2          : unreal32
