@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="76"
+VERSION_BUILD="77"
 
 # $Log$
+#
+# BUILD : 1.3.0.77 (SVN)
+# BUGS  : 395
+# NOTES : Applied Trystan patch for 395, it doesnt fix it, but we are getting close. Applied OUTsider patch which adds support for ScaryNet IRCu. Added make recompile option, so you dont need to clean, distclean and Config everytime you modify the source code.
 #
 # BUILD : 1.3.0.76 (SVN)
 # BUGS  : N/A
